src/app/components/basket/basket.component.css
::ng-deep .p-sidebar {
    padding: 0;
}

.content {
    height: 100%;
}

::ng-deep .p-sidebar-right {
    width: 25rem !important;
}

::ng-deep .p-sidebar-content {
    height: 100vh;
}

::ng-deep .p-sidebar-close {
    padding-right: 1em;
    z-index: 1;
}

::ng-deep #SendMailModal .p-dialog-header,
::ng-deep #SendMailModal .p-dialog-content,
::ng-deep #ShowBasketListModal .p-dialog-header,
::ng-deep #ShowBasketListModal .p-dialog-content,
::ng-deep #EmptyBasketModal .p-dialog-header,
::ng-deep #EmptyBasketModal .p-dialog-content {
    background: white !important;
    color: #383838;
}

::ng-deep .textModal .p-dialog-content,
::ng-deep .textModal .p-dialog-footer {
    padding: 0;
}

#cancelEmptyBtn,
#okEmptyBtn,
#openMailBtn,
#getListBtn {
    height: 2.5em;
    width: 50%;
    margin: 0;
}

.basket-list {
    max-height: 85vh;
}

#cancelEmptyBtn {
    border-radius: 0 0 0 3px;
    background-color: #6c757d;
}

#okEmptyBtn,
#openMailBtn {
    border-radius: 0 0 3px 0;
    background-color: #4392af;
}

#getListBtn {
    border-radius: 0 0 0 3px;
    background-color: #236088;
}

.header {
    height: 4.4vh;
    background-color: #f8f9fa;
}

.deleteBtn {
    border: none;
    padding: 0 0.5rem;
    border-radius: 20px;
}

button:focus {
    outline: none;
}

.deleteBtn p {
    margin: -1px 0 1px 0;
}

.img {
    max-height: 2rem;
}

.basketBtn {
    width: 50%;
    border: none;
    color: white;
    height: 3.55em;
}

#cancelBtn {
    background-color: #6c757d;
}

#okBtn {
    background-color: #4492af;
}

.tableFooter {
    height: 2em;
}

.qtés {
    width: 4em;
}

.qteBtn {
    color: white;
    border: none;
    background: #4492af;
    height: 1.35em;
}

.qteBtn:focus {
    outline: none;
}

.qteBtn:disabled {
    opacity: 50%;
}

.qteBtn span {
    align-self: center;
}

.listForManualMail {
    background-color: #f1f1f1;
    width: 35em;
    border-radius: 3px;
}

#closeBasketListModal {
    border: none;
    color: white;
    border-radius: 3px;
    background: #4492af;
}

#copyBtn {
    padding: 0;
    border-radius: 3px;
}

#copyBtnDiv:disabled {
    background: none;
}

#basketWarning {
    border-top: 1px solid #dbdbdb;
    text-align: justify;
    background: #f8f9fa;
}

#basketWarning svg {
    margin: 0 0.5em;
}

#basketWarning p {
    margin: 0;
    font-style: italic;
}

